// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avatar With Gradient Seed 1`] = `
<div>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(55,105,230) 0%, rgb(179,164,244) 100%)",
        }
      }
    >
      <span>
        KT
      </span>
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "32px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(185,68,218) 0%, rgb(238,170,217) 100%)",
        }
      }
    >
      <span>
        CC
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Avatar With Icon 1`] = `
<div>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "backgroundColor": "#5644D8",
        }
      }
    >
      <i
        className="fa fa-paper-plane"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "backgroundColor": "#7BC4A9",
        }
      }
    >
      <i
        className="fa fa-clock"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "backgroundColor": "#18a8d8",
        }
      }
    >
      <i
        className="fa fa-salesforce"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "backgroundColor": "#c14800",
        }
      }
    >
      <i
        className="fa fa-magento"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "32px",
      }
    }
  >
    <div
      className="undefined"
      style={
        Object {
          "backgroundColor": "#5644D8",
        }
      }
    >
      <i
        className="fa fa-paper-plane"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "32px",
      }
    }
  >
    <div
      className="undefined"
      style={
        Object {
          "backgroundColor": "#7BC4A9",
        }
      }
    >
      <i
        className="fa fa-clock"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "32px",
      }
    }
  >
    <div
      className="undefined"
      style={
        Object {
          "backgroundColor": "#18a8d8",
        }
      }
    >
      <i
        className="fa fa-salesforce"
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "32px",
      }
    }
  >
    <div
      className="undefined"
      style={
        Object {
          "backgroundColor": "#c14800",
        }
      }
    >
      <i
        className="fa fa-magento"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Avatar With Image 1`] = `
<div>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={Object {}}
    >
      <img
        className=""
        onError={[Function]}
        onLoad={[Function]}
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={Object {}}
    >
      <img
        className=""
        onError={[Function]}
        onLoad={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Avatar With Initials 1`] = `
<div>
  <small>
    User one name John - should print "J".
  </small>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(55,105,230) 0%, rgb(179,164,244) 100%)",
        }
      }
    >
      <span>
        J
      </span>
    </div>
  </div>
  <br />
  <small>
    User with only phone number (+4560860931) - should print "31".
  </small>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(55,105,230) 0%, rgb(179,164,244) 100%)",
        }
      }
    >
      <span>
        31
      </span>
    </div>
  </div>
  <br />
  <small>
    User with name (John Something), email and phone number - should print "JS".
  </small>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(55,105,230) 0%, rgb(179,164,244) 100%)",
        }
      }
    >
      <span>
        JS
      </span>
    </div>
  </div>
  <br />
  <small>
    No name - only email (john@gmail.com) and phone number - should print "JG".
  </small>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(55,105,230) 0%, rgb(179,164,244) 100%)",
        }
      }
    >
      <span>
        jg
      </span>
    </div>
  </div>
  <br />
  <small>
    No email - only name (John Something) and phone number - should print "JS".
  </small>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(55,105,230) 0%, rgb(179,164,244) 100%)",
        }
      }
    >
      <span>
        JS
      </span>
    </div>
  </div>
  <br />
  <h6>
    Anonymous - only id
  </h6>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "#CACACA",
        }
      }
    >
      <i
        className="fa fa-user-secret"
      />
    </div>
  </div>
  <br />
  <h6>
    Unassigned
  </h6>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "#CACACA",
        }
      }
    >
      <i
        className="fa fa-user-slash"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Avatar With User 1`] = `
<div>
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={Object {}}
    >
      <img
        alt="John Doe"
        className=""
        onError={[Function]}
        onLoad={[Function]}
      />
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "width": "45px",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "background": "linear-gradient(315deg, rgb(55,105,230) 0%, rgb(179,164,244) 100%)",
        }
      }
    >
      <span>
        JD
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Search Box Regular 1`] = `
<div>
  <div
    className=""
  >
    <div>
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div>
      <span
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={-1}
      >
        <i
          className="fa fa-search"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Search Box With Loading Indicator 1`] = `
<div>
  <div
    className=""
    fakeUsers={
      Array [
        Object {
          "id": 1,
          "name": "George",
        },
        Object {
          "id": 2,
          "name": "Mike",
        },
        Object {
          "id": 3,
          "name": "Gabriella",
        },
        Object {
          "id": 4,
          "name": "Dan",
        },
        Object {
          "id": 5,
          "name": "Christine",
        },
      ]
    }
  >
    <div>
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div>
      <span
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={-1}
      >
        <i
          className="fa fa-search"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Spinner Regular 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="undefined"
    style={
      Object {
        "borderTopColor": undefined,
        "borderWidth": "3px",
        "height": "32px",
        "width": "32px",
      }
    }
  />
  <br />
  <div
    className="undefined"
    style={
      Object {
        "borderTopColor": "#00cc00",
        "borderWidth": "3px",
        "height": "32px",
        "width": "32px",
      }
    }
  />
  <br />
  <div
    className="undefined"
    style={
      Object {
        "borderTopColor": "tomato",
        "borderWidth": "3px",
        "height": "32px",
        "width": "32px",
      }
    }
  />
</div>
`;
